--- a/index.html
+++ b/index.html
@@ -18,33 +18,46 @@
             <div class="row">
               <h3>Frontend or Backend</h3>
               <p><em>Would you like to work on what people see (Frontend) or how a site works (Backend).</em></p>
-              <select class="form-control" id="season" required>
+              <select class="form-control" id="FrontendBackend" required>
                 <option value="">Select your answer</option>
                 <option value="1">Frontend</option>
                 <option value="2">Backend</option>
               </select>
               <h3>Company size</h3>
+              <p><em>Would you like to work with a larger company or a smaller company/startup.</em></p>
+              <select class="form-control" id="CompanySize" required>
+                <option value="">Select preference</option>
+                <option value="1">Large</option>
+                <option value="2">Small</option>
+              </select>
+              <h3>Company size</h3>
+              <p><em>Would you like to work with a larger company or a smaller company/startup.</em></p>
               <select class="form-control" id="season" required>
-                <option value="">Select age</option>
-                <option value="1">0 - 15</option>
-                <option value="2">16 - 30</option>
-                <option value="3">31 - 45</option>
-                <option value="4">45 - 60+</option>
+                <option value="">Select preference</option>
+                <option value="1">Large</option>
+                <option value="2">Small</option>
+              </select>
+              <h3>Company size</h3>
+              <p><em>Would you like to work with a larger company or a smaller company/startup.</em></p>
+              <select class="form-control" id="season" required>
+                <option value="">Select preference</option>
+                <option value="1">Large</option>
+                <option value="2">Small</option>
               </select>
             </div>
           <button type="submit" class="btn">Submit</button>
       </form>
     </div>
     <div class="col-md-6">
-      <div id="answerSki">
-        <img src="img/c.png" alt="C">
+      <div id="ruby">
+        <img src="img/ruby.jpeg" alt="ruby">
         <p>Lorem ipsum dolor amet lumbersexual poutine keytar quinoa biodiesel vaporware art party pickled celiac gastropub single-origin coffee vinyl distillery. Poutine squid kale chips viral, raw denim umami man bun asymmetrical bicycle rights XOXO roof party jean shorts polaroid put a bird on it.</p>
       </div>
-      <div id="answerRiver">
-        <img src="img/drupal.png" alt="drupal">
+      <div id="react">
+        <img src="img/react.png" alt="react">
         <p>Lorem ipsum dolor amet lumbersexual poutine keytar quinoa biodiesel vaporware art party pickled celiac gastropub single-origin coffee vinyl distillery. Poutine squid kale chips viral, raw denim umami man bun asymmetrical bicycle rights XOXO roof party jean shorts polaroid put a bird on it.</p>
       </div>
-      <div id="answerCanyon">
+      <div id="java">
         <img src="img/java.png" alt="java">
         <p>Lorem ipsum dolor amet lumbersexual poutine keytar quinoa biodiesel vaporware art party pickled celiac gastropub single-origin coffee vinyl distillery. Poutine squid kale chips viral, raw denim umami man bun asymmetrical bicycle rights XOXO roof party jean shorts polaroid put a bird on it.</p>
       </div>
