finish setting answers

--- a/index.html
+++ b/index.html
@@ -58,16 +58,34 @@
     </div>
     <div class="col-md-6">
       <div id="ruby">
-        <img src="img/ruby.jpeg" alt="ruby">
-        <p>Lorem ipsum dolor amet lumbersexual poutine keytar quinoa biodiesel vaporware art party pickled celiac gastropub single-origin coffee vinyl distillery. Poutine squid kale chips viral, raw denim umami man bun asymmetrical bicycle rights XOXO roof party jean shorts polaroid put a bird on it.</p>
+        <a href="https://www.epicodus.com/ruby"><img src="img/ruby.jpeg" alt="ruby"></a>
+        <p><a href="https://www.epicodus.com/ruby">Ruby</a> is a dynamic, reflective, object-oriented, general-purpose programming language.</p>
+        <ul>
+          <li>Good for rapid application developement</li>
+          <li>Ruby code is very readable and mostly self-documenting</li>
+          <li>Rails has developed a strong focus on testing</li>
+          <li>Open source</li>
+        </ul>
       </div>
       <div id="react">
-        <img src="img/react.png" alt="react">
-        <p>Lorem ipsum dolor amet lumbersexual poutine keytar quinoa biodiesel vaporware art party pickled celiac gastropub single-origin coffee vinyl distillery. Poutine squid kale chips viral, raw denim umami man bun asymmetrical bicycle rights XOXO roof party jean shorts polaroid put a bird on it.</p>
+        <a href="https://www.epicodus.com/css"><img src="img/react.png" alt="react"></a>
+        <p><a href="https://www.epicodus.com/css">CSS/React.js</a> In computing, React is a JavaScript library for building user interfaces. It is maintained by Facebook, Instagram and a community of individual developers and corporations.</p>
+        <ul>
+          <li>Virtual DOM</li>
+          <li>Permits reusing code components</li>
+          <li>One-direction data flow</li>
+          <li>Open source</li>
+        </ul>
       </div>
       <div id="java">
-        <img src="img/java.png" alt="java">
-        <p>Lorem ipsum dolor amet lumbersexual poutine keytar quinoa biodiesel vaporware art party pickled celiac gastropub single-origin coffee vinyl distillery. Poutine squid kale chips viral, raw denim umami man bun asymmetrical bicycle rights XOXO roof party jean shorts polaroid put a bird on it.</p>
+        <a href="https://www.epicodus.com/java"><img src="img/java.png" alt="java"></a>
+        <p><a href="https://www.epicodus.com/java">Java</a> Java is a set of computer software and specifications developed by Sun Microsystems, which was later acquired by the Oracle Corporation, that provides a system for developing application software and deploying it in a cross-platform computing environment.</p>
+        <ul>
+          <li>Easy to learn</li>
+          <li>Platform Independent</li>
+          <li>Object oriented</li>
+          <li>Open source</li>
+        </ul>
       </div>
     </div>
   </div>
