update functions in js

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                 <p><em>Would you like to work on what people see (Frontend) or how a site works (Backend)?</em></p>
                 <select class="form-control" id="FrontendBackend" required>
                   <option value="">Select your answer</option>
-                  <option value="1">Frontend</option>
+                  <option value="1" id="frontEnd">Frontend</option>
                   <option value="9">Backend</option>
                 </select>
                 <h3>Company size</h3>
                 <p><em>Would you like to work with a larger company or a smaller company/startup?</em></p>
                 <select class="form-control" id="CompanySize" required>
                   <option value="">Select preference</option>
-                  <option value="9">Large</option>
+                  <option value="2">Large</option>
                   <option value="1">Small</option>
                 </select>
                 <h3>Windows</h3>
@@ -53,9 +53,9 @@
                 <p><em>Would you like to work on Desktop applications, Web or Mobile?</em></p>
                 <select class="form-control" id="platform" required>
                   <option value="">Select preference</option>
-                  <option value="1">Desktop</option>
-                  <option value="2">Web</option>
-                  <option value="3">Mobile</option>
+                  <option value="2">Desktop</option>
+                  <option value="1">Web</option>
+                  <option value="9">Mobile</option>
                 </select>
               </div>
             <button type="submit" class="btn">Submit</button>
