--- a/index.html
+++ b/index.html
@@ -26,36 +26,36 @@
                 <select class="form-control" id="FrontendBackend" required>
                   <option value="">Select your answer</option>
                   <option value="1" id="frontEnd">Frontend</option>
-                  <option value="9">Backend</option>
+                  <option value="9" id="backEnd">Backend</option>
                 </select>
                 <h3>Company size</h3>
                 <p><em>Would you like to work with a larger company or a smaller company/startup?</em></p>
                 <select class="form-control" id="CompanySize" required>
                   <option value="">Select preference</option>
-                  <option value="2">Large</option>
-                  <option value="1">Small</option>
+                  <option value="2" id="large">Large</option>
+                  <option value="1" id="small">Small</option>
                 </select>
                 <h3>Windows</h3>
                 <p><em>Do you prefer a windows environment?</em></p>
                 <select class="form-control" id="windows" required>
                   <option value="">Select preference</option>
-                  <option value="1">Yes</option>
-                  <option value="2">No preference</option>
+                  <option value="1" id="windowsYes">Yes</option>
+                  <option value="2" id="windowsNo">No preference</option>
                 </select>
                 <h3>Database</h3>
                 <p><em>Have you, or would you like to work with databases?</em></p>
                 <select class="form-control" id="preference" required>
                   <option value="">Select preference</option>
-                  <option value="2">Yes</option>
-                  <option value="1">No</option>
+                  <option value="2" id="databaseYes">Yes</option>
+                  <option value="1" id="databaseNo">No</option>
                 </select>
                 <h3>Platform</h3>
                 <p><em>Would you like to work on Desktop applications, Web or Mobile?</em></p>
                 <select class="form-control" id="platform" required>
                   <option value="">Select preference</option>
-                  <option value="2">Desktop</option>
-                  <option value="1">Web</option>
-                  <option value="9">Mobile</option>
+                  <option value="2" id="platDesktop">Desktop</option>
+                  <option value="1" id="platWeb">Web</option>
+                  <option value="9" id="platMobile">Mobile</option>
                 </select>
               </div>
             <button type="submit" class="btn">Submit</button>
