update css to a working state, had to pull css from git from last working state.

--- a/index.html
+++ b/index.html
@@ -72,10 +72,12 @@
           <li>Rails has developed a strong focus on testing</li>
           <li>Open source</li>
         </ul>
+        <img src="img/ruby.png" alt="ruby" class="secondimage">
       </div>
       <div id="react">
         <a href="https://www.epicodus.com/css"><img src="img/react.png" alt="react"></a>
-        <p><a href="https://www.epicodus.com/css">CSS/React.js</a> In computing, React is a JavaScript library for building user interfaces. It is maintained by Facebook, Instagram and a community of individual developers and corporations.</p>
+        <p class="textanswer"><a href="https://www.epicodus.com/css">CSS/React.js</a> In computing, React is a JavaScript library for building user interfaces. It is maintained by Facebook, Instagram and a community of individual developers and corporations.</p>
+        <img src="img/reactcode.png" alt="react" class="secondimage">
         <ul>
           <li>Virtual DOM</li>
           <li>Permits reusing code components</li>
@@ -84,8 +86,8 @@
         </ul>
       </div>
       <div id="java">
-        <a href="https://www.epicodus.com/java"><img src="img/java.png" alt="java"></a>
-        <p><a href="https://www.epicodus.com/java">Java</a> is a set of computer software and specifications developed by Sun Microsystems, which was later acquired by the Oracle Corporation, that provides a system for developing application software and deploying it in a cross-platform computing environment.</p>
+        <p><a href="https://www.epicodus.com/java"><img src="img/java.png" alt="java"></a>
+        <a href="https://www.epicodus.com/java">Java</a> is a set of computer software and specifications developed by Sun Microsystems, which was later acquired by the Oracle Corporation, that provides a system for developing application software and deploying it in a cross-platform computing environment.<img src="img/java-code.gif" alt="java" class="secondimage"></p>
         <ul>
           <li>Easy to learn</li>
           <li>Platform Independent</li>
