--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
                   <option value="1" id="platWeb">Web</option>
                   <option value="9" id="platMobile">Mobile</option>
                 </select>
+                <h3>Your Name</h3>
+                <p><em>Please provide your name:</em></p>
+                <label for="name"></label>
+                <input id="name" class="form-control" type="text">
               </div>
             <button type="submit" class="btn">Submit</button>
           </div>
@@ -65,7 +69,7 @@
     <div class="col-md-6">
       <div id="ruby">
         <a href="https://www.epicodus.com/ruby"><img src="img/ruby.jpeg" alt="ruby"></a>
-        <p><a href="https://www.epicodus.com/ruby">Ruby</a> is a dynamic, reflective, object-oriented, general-purpose programming language.</p>
+        <p><span class="formOutput"></span><a href="https://www.epicodus.com/ruby">Ruby</a>. Ruby is a dynamic, reflective, object-oriented, general-purpose programming language.</p>
         <ul>
           <li>Good for rapid application developement</li>
           <li>Ruby code is very readable and mostly self-documenting</li>
@@ -76,7 +80,7 @@
       </div>
       <div id="react">
         <a href="https://www.epicodus.com/css"><img src="img/react.png" alt="react"></a>
-        <p class="textanswer"><a href="https://www.epicodus.com/css">CSS/React.js</a> In computing, React is a JavaScript library for building user interfaces. It is maintained by Facebook, Instagram and a community of individual developers and corporations.</p>
+        <p><span class="formOutput"></span><a href="https://www.epicodus.com/css">CSS/React.js</a> React is a JavaScript library for building user interfaces. It is maintained by Facebook, Instagram and a community of individual developers and corporations.</p>
         <img src="img/reactcode.png" alt="react" class="secondimage">
         <ul>
           <li>Virtual DOM</li>
@@ -86,13 +90,12 @@
         </ul>
       </div>
       <div id="java">
-        <p><a href="https://www.epicodus.com/java"><img src="img/java.png" alt="java"></a>
-        <a href="https://www.epicodus.com/java">Java</a> is a set of computer software and specifications developed by Sun Microsystems, which was later acquired by the Oracle Corporation, that provides a system for developing application software and deploying it in a cross-platform computing environment.<img src="img/java-code.gif" alt="java" class="secondimage"></p>
+        <a href="https://www.epicodus.com/java"><img src="img/java.png" alt="java"></a>
+        <p class="textanswer"><span class="formOutput"></span><a href="https://www.epicodus.com/java">Java</a> is a set of computer software and specifications developed by Sun Microsystems, which was later acquired by the Oracle Corporation, that provides a system for developing application software and deploying it in a cross-platform computing environment.<img src="img/java-code.gif" alt="java" class="secondimage"></p>
         <ul>
           <li>Easy to learn</li>
           <li>Platform Independent</li>
           <li>Object oriented</li>
-          <li>Open source</li>
         </ul>
       </div>
     </div>
